# survivor

./: .gitignore  CMakeLists.txt  README.md  suppr.txt
include/: colors.h
include/engine/: Clock.h  Event.h  EventHandler.h  Game.h  Scene.h  time.h
include/scenes/: GameplayScene.h  MainMenuScene.h
resources/aseprite/: character_sheet.aseprite
src/: main.cpp
src/engine/: Clock.cpp  Event.cpp  EventHandler.cpp  Game.cpp  time.cpp
src/scenes/: GameplayScene.cpp  MainMenuScene.cpp
